# epp_final_project

./: CHANGES.md  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
paper/: eppfinalproject.tex  eppfinalproject_pres.tex  task_paper.py
src/eppfinalproject/analysis/: task_analysis.py
src/eppfinalproject/data_management/: __init__.py  task_data_management.py
src/eppfinalproject/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
